--- a/wiki/MonoCAM.wiki
+++ b/wiki/MonoCAM.wiki
@@ -13,9 +13,8 @@
  * OpenGL
 
 = Architecture =
-Some thoughts on the overall architecture should appear here
 
-MonoCAMArchitecture
+[MonoCAMArchitecture] describes plans for the program architecture.
 
 = Websites =
 Homepage: http://code.google.com/p/monocam
@@ -28,4 +27,3 @@ some other wiki pages describe CAM links and resources:
  * http://wiki.linuxcnc.org/cgi-bin/emcinfo.pl?Cam
  * http://wiki.linuxcnc.org/cgi-bin/emcinfo.pl?List_Of_CAM_References
  * http://www.editthis.info/opencam/Main_Page
-
