Edited wiki page through web user interface.

--- a/wiki/GEO.wiki
+++ b/wiki/GEO.wiki
@@ -1,3 +1,5 @@
+back to [MonoCAMArchitecture]
+
 #geometry object definitions and operations etc.
 
 = GEO =
@@ -27,4 +29,3 @@ Compound objects could easily be created from simple objects. Such as:
 
 == Relational Geometry ==
 relational geometry is a nice object oriented way of implementing parametric CAD
-
