--- a/wiki/MonoCAM.wiki
+++ b/wiki/MonoCAM.wiki
@@ -38,6 +38,7 @@ some other wiki pages describe CAM links and resources:
  * OpenGL
   * [http://www.opengl.org/documentation/red_book/ Red Book]
   * [http://www.opengl.org/documentation/blue_book/ Blue Book] (Reference manual)
+  * OpenGL Super Bible
  * OO and Patterns
   * Gamma et al. Design Patterns
   * Design Pattern-Oriented Software Architecture(A System Of Patterns)
