--- a/wiki/RelationalGeometry.wiki
+++ b/wiki/RelationalGeometry.wiki
@@ -15,13 +15,51 @@ This directly leads to parametric CAD behaviour. If p1 or p2 is moved for some r
 
 There are also some special rules for creating and deleting objects. Obviously we can't create line L1 before we have the endpoints - otherwise we could not find where the line should begin and end. Another effect is that once L1 is created, we cannot delete either p1 or p2 while L1 is alive. Deleting p1 or p2 would leave L1 without supports - an impossible situation for L1. So deleting and object with dependencies should throw an error message to the user.
 
+The neat thing about this is that when for example a *Point* is required as a support for a line, then any *Point* object will do. So the line could have a bead or a magnet as supports too.
+
 = RGEO Objects =
 All objects share some common features:
   * Unique name
   * Layer number
   * Shown/Hidden
+== Special objects ==
+ * Coordinate systems, aka Frames
+ * Planes
 == Points ==
 Points are '0D' objects, that when queried 'where are you?' should return a single position (x, y, z).
+
+ * AbsPoint
+  * Supported by: coordinate triplet (x,y,z)
+  * Equation: none
+  * Description: A point in space at a user specified (x,y,z) location
+ * RelPoint
+  * Supported by: another *Point* p
+  * equation: p + dp   where dp = (dx,dy,dz) is given by the user
+  * Description: a relative point. start at point p and move by (dx,dy,dz) to get to this 
+
+Points that lie on a Curve are called *Beads*. They are located on the curve by calling the support curve with a certain t-parameter.
+ * AbsBead
+  * Support: a Curve
+  * Equation: curve(t) where t is a given parameter, usually [0,1]
+  * Description: a point on the curve at parameter value t
+ * RelBead
+  * Support: a Bead and a Curve (the bead must lie on curve)
+  * Equation: curve(t+dt) where t is the t-value of the supporting bead, and dt is given by used
+  * Description: a bead offset by an amount dt from another bead
+ * ArcLenBead
+  * Support: Bead or Curve, ds
+  * Description: a bead located at arc-length ds from the supporting bead or from the start of the curve.
+ * CopyBead
+  * Support: a Bead and a Curve (bead need not lie on curve)
+  * Description: a bead located at the same t-value as another bead
+
+Points that lie on surfaces are called *Magnets*. They are located by calling the supporting surface's p(u,v) function with parameters (u,v)
+ * AbsMagnet
+  * Support: Surface, parameter pair (u,v)
+  * Description: point at position (u,v) on the surface
+ * RelMagnet
+ * CopyMagnet
+
 == Curves ==
 Curves are '1D' objects that extend from parameter value t=0 to parameter value t=1. They should have a method for outputting a point that lies on the curve at a give t-value (sometimes t<0 and t>1 is allowed too!)
 == Surfaces ==
