--- a/wiki/CAM.wiki
+++ b/wiki/CAM.wiki
@@ -1,4 +1,4 @@
-#thoughts on CAM algorithms
+#summary CAM algorithms (input/output/function)
 == CAM ==
 One way of dividing these algorithms is into 1D/2D/3D:
 1D Toolpaths
