--- a/wiki/MonoCAMArchitecture.wiki
+++ b/wiki/MonoCAMArchitecture.wiki
@@ -4,7 +4,7 @@ Back to [MonoCAM]
 
 = Main parts =
 
- * GUI
+ * [GUI]
   ** This is the GUI. It has an OpenGL view of current GEO objects.
   ** menus and toolbars for performing CAD/CAM operations.
  * [GEO]
@@ -22,10 +22,9 @@ Back to [MonoCAM]
    *** Linear Feed
    *** Arc Feed
    *** (coolant,mist,spindle,tool,etc.)
- * IO
+ * [IO]
   ** This is a library that can either read files and create GEO from them (import)
   ** or read GEO and write a file (export)
-   ** ascii STL import already works
   ** note that a post-processor is a kind of export function. it takes a toolpath and represents it as g-code
  * TOOLLIB
   ** a library of cutting tools with associated parameters (cutter shapes, feed/tooth etc)
