Edited wiki page through web user interface.

--- a/wiki/IO.wiki
+++ b/wiki/IO.wiki
@@ -1,5 +1,7 @@
 #summary Input/Output of GEO objects.
 
+back to [MonoCAMArchitecture]
+
 Input and Output functions read or write GEO objects from/to a file.
 
 = Post-Processors (export) =
