--- a/wiki/ZoomRotatePan.wiki
+++ b/wiki/ZoomRotatePan.wiki
@@ -34,5 +34,16 @@ here the dot (.) is used for vector dot-product and the cross (x) is used for ve
 
 = zoom =
 zoom is very easy, you just change r.
+
 my suggestion is that this is done with the mouse-wheel.
+
+for the up vector calculation above to work *it is important that r does not go to zero!*
 = rotate =
+this is also fairly easy.
+
+to rotate side-to-side you change theta
+
+to rotate up-down you change fi. it might be a good idea to restrict fi to -pi<fi<pi. try it out and see how it feels. 
+
+= pan =
+this is a bit harder. we want to pan in the plane which is perpendicular to the vector from the camera to center.
