--- a/wiki/ZoomRotatePan.wiki
+++ b/wiki/ZoomRotatePan.wiki
@@ -46,7 +46,7 @@ to rotate side-to-side you change theta
 to rotate up-down you change fi. it might be a good idea to restrict fi to -pi/2<fi<pi/2. try it out and see how it feels. 
 
 = pan =
-this is a bit harder. we want to pan in the plane which is perpendicular to the vector from the camera to center.
+we want to pan in the plane which is perpendicular to the vector from the camera to center.
 
 There are two panning directions left-right (lr) and up-down (ud).
 
