--- a/wiki/GEO.wiki
+++ b/wiki/GEO.wiki
@@ -9,10 +9,12 @@ Each GEO object should have:
  * Simple stuff
   * A unique name
   * A color
+  * Layer information
   * A visibility switch (show/hide)
   * A shading switch (shading/wireframe)
  * GUI/OpenGL interface
   * A method for generating an OpenGL display-list of itself. This display-list representation need only be accurate to about 1 pixel or slightly less.
+   * depending on the object the display list may contain POINT, LINE or TRIANGLE data
   * a mechanism for messaging to the GUI that something has changed and we need to generate a new display-list
  * CAM interface
   * A method for outputting itself in a CAM friendly format. This is mostly the same format as for OpenGL (points,lines,triangles), but the difference is that a given tolerance value in mm should be respected when converting to triangles/lines
@@ -22,6 +24,7 @@ Examples of simple GEO objects are:
  * Point
  * Line
  * Arc/Circle
+ * ToolPath
 
 Compound objects could easily be created from simple objects. Such as:
  * rectangle (set of four lines)
