--- a/wiki/GEO.wiki
+++ b/wiki/GEO.wiki
@@ -15,6 +15,7 @@ Each GEO object should have:
  * GUI/OpenGL interface
   * A method for generating an OpenGL display-list of itself. This display-list representation need only be accurate to about 1 pixel or slightly less.
    * depending on the object the display list may contain POINT, LINE or TRIANGLE data
+   * the object should probably store the display-list ID 
   * a mechanism for messaging to the GUI that something has changed and we need to generate a new display-list
  * CAM interface
   * A method for outputting itself in a CAM friendly format. This is mostly the same format as for OpenGL (points,lines,triangles), but the difference is that a given tolerance value in mm should be respected when converting to triangles/lines
