--- a/wiki/MonoCAM.wiki
+++ b/wiki/MonoCAM.wiki
@@ -1,4 +1,5 @@
 #summary Table of contents. Start here.
+#labels Featured
 
 = MonoCAM is: =
  * a CAD program - you can design and manipulate points, curves, and surfaces
