--- a/wiki/CamVideos.wiki
+++ b/wiki/CamVideos.wiki
@@ -4,9 +4,9 @@ For the UI and for toolpath types we should try to learn as much as possible fro
 
 = MasterCAM =
  * [http://www.mastercam.com/CamZone/VideoTestimonials/ Video testimonials]
+ * [http://www.cimco-hsm.com/index.php?page=download Cimco HSM]
 = SurfCAM =
  * [http://www.surfware.com/default.asp?contentID=553 TrueMill videos]
 = OneCNC =
  * [http://www.onecnc.net/videos/video_index.htm OneCNC videos]
-
 
