--- a/wiki/CAM.wiki
+++ b/wiki/CAM.wiki
@@ -11,7 +11,7 @@ One way of dividing these algorithms is into 1D/2D/3D:
 === 1D toolpaths ===
 1D TPs are based on points. Typically you would specify a point e.g. where you want to drill a hole. This algorithm is very simple: (1) in the clearance plane, rapid to the (x,y) point, (2) rapid down to the feed plane, (3) feed down to the point.
 
-A first stupid version of the algorithm could just machine the points in the order they were given to the algorithm. A smarter version would use one of the many TSP algorithms for improving the order of the points. Solving the [http://en.wikipedia.org/wiki/Travelling_salesman TSP] should probably be done with a different algorithm depending on the problem size.
+A first stupid version of the algorithm could just machine the points in the order they were given to the algorithm. A smarter version would use one of the many TravelingSalesman algorithms for improving the order of the points. Solving the [http://en.wikipedia.org/wiki/Travelling_salesman TSP] should probably be done with a different algorithm depending on the problem size.
 
 For small sets (<10 or so) you can calculate all routes by brute-force. For medium-sized problems a number of heuristic approaches exist (nearest neighbour, spanning trees, etc.) For really large sets some general purpose optimization algorithm is probably more suitable. David MacNab’s pygene module that implements a genetic algorithm might be a good starting point. Simulated annealing is another option.
 
