--- a/wiki/VTK.wiki
+++ b/wiki/VTK.wiki
@@ -9,4 +9,6 @@ VTK is documented in two books
  * user guide: http://www.kitware.com/products/vtkguide.html
  * textbook: http://www.kitware.com/products/vtktextbook.html
 
+Here's a talk about VTK http://video.google.com/videoplay?docid=-7309103812514185523
+
 There is a video here http://video.google.com/videoplay?docid=654054312268943772 but it's in some strange language...
