--- a/wiki/VTK.wiki
+++ b/wiki/VTK.wiki
@@ -5,6 +5,7 @@ The visualization toolkit is one option for rendering.
  * homepage: http://www.kitware.com/ 
  * .NET wrappers here http://vtkdotnet.sourceforge.net/
  * wikipedia http://en.wikipedia.org/wiki/VTK
+ * tutorial http://cherokee.ncsa.uiuc.edu/~semeraro/PPT/VTK_TUTORIAL/v3_document.htm
 
 VTK is documented in two books
  * user guide: http://www.kitware.com/products/vtkguide.html
