--- a/wiki/MonoCAM.wiki
+++ b/wiki/MonoCAM.wiki
@@ -34,6 +34,7 @@ some other wiki pages describe CAM links and resources:
  * http://wiki.linuxcnc.org/cgi-bin/emcinfo.pl?Cam
  * http://wiki.linuxcnc.org/cgi-bin/emcinfo.pl?List_Of_CAM_References
  * http://www.editthis.info/opencam/Main_Page
+There are also OtherProjects
 == Books ==
  * C# NET/Mono
   * Mono: A Developers Notebook Developers Notebook (O'reilly Jul 2004)
